refactor(core): 优化代码实现并增强SQL安全校验功能
- 将Collectors.toList()替换为更简洁的toList()方法调用
- 重构ChatRecordServiceImpl中的数据库更新逻辑，使用LambdaUpdateWrapper提高性能
- 移除未使用的ChartConfig导入并优化会话删除逻辑
- 统一会话删除操作到deleteSessionsInternal私有方法中避免重复代码
- 在CLAUDE.md文档中补充自然语言反馈和图表配置相关说明
- 增加MySQL关联查询示例并完善字段缺失推理规则
- 优化SchemaCollectorServiceImpl中的权限哈希生成算法
- 增强SQL执行流程，支持AI自动修正失败时返回EXPLAIN说明
- 更新SqlGeneratorService接口返回AiResponse对象包含更多元数据
- 重构SqlSecurityServiceImpl中的LIMIT值提取逻辑支持多种数据库
- 完善SSE聊天适配器的错误处理机制增加日志记录
- 优化VectorSchemaLinker中的降级策略和错误处理流程